--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     },
     "dependencies": {
         "@hono/node-server": "^1.14.2",
+        "@prisma/client": "^6.16.2",
+        "better-auth": "^1.3.13",
+        "better-sqlite3": "^12.2.0",
         "hono": "^4.7.10"
     },
     "devDependencies": {
+        "@types/better-sqlite3": "^7.6.13",
         "@types/node": "^20.11.17",
-        "tsx": "^4.7.1",
+        "prisma": "^6.16.2",
+        "tsx": "^4.20.5",
         "typescript": "^5.8.3"
     }
 }
