--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "@prisma/client": "^6.16.2",
         "better-auth": "^1.3.13",
         "better-sqlite3": "^12.2.0",
-        "hono": "^4.7.10"
+        "hono": "^4.7.10",
+        "zod": "^4.1.9"
     },
     "devDependencies": {
         "@types/better-sqlite3": "^7.6.13",
